--- a/www/index.html
+++ b/www/index.html
@@ -20,6 +20,8 @@
   <script src="https://www.gstatic.com/firebasejs/5.3.0/firebase-database.js"></script>
   <!-- VueFire -->
   <script src="https://unpkg.com/vuefire/dist/vuefire.js"></script>
+  <!-- TimeAgo -->
+  <script src="js/timeago.min.js"></script>
   <!-- this project files -->
   <link href="css/main.css" rel="stylesheet" />
   <script src="js/ForgeTree.js"></script>
