added comment to the issue

--- a/www/index.html
+++ b/www/index.html
@@ -107,5 +107,6 @@
 <!-- run the entry js file -->
 <script src="js/firebase_db.js"></script>
 <script src="components/issues.js"></script>
+<script src="components/comment.js"></script>
 <script src="js/main.js"></script>
 </html>
