--- a/www/index.html
+++ b/www/index.html
@@ -99,5 +99,6 @@
 <script src="js/firebase_db.js"></script>
 <script src="components/issues.js"></script>
 <script src="components/comment.js"></script>
+<script src="components/newcomment.js"></script>
 <script src="js/main.js"></script>
 </html>
