added open/close issue functionality close #4

--- a/www/index.html
+++ b/www/index.html
@@ -97,6 +97,7 @@
 </body>
 <!-- run the entry js file -->
 <script src="js/firebase_db.js"></script>
+<script src="components/issue.js"></script>
 <script src="components/issues.js"></script>
 <script src="components/comment.js"></script>
 <script src="components/newcomment.js"></script>
