--- a/www/index.html
+++ b/www/index.html
@@ -106,11 +106,14 @@
       </div>
     </div>
   </div>
+  <!-- Modal Export Panel -->
+  <div id="exportpanel"></div>
 </body>
 <!-- run the entry js file -->
 <script src="js/firebase_db.js"></script>
 <script src="components/issue.js"></script>
 <script src="components/issues.js"></script>
+<script src="components/export.js"></script>
 <script src="components/comment.js"></script>
 <script src="components/newcomment.js"></script>
 <script src="js/main.js"></script>
